air config and user updating endpoint added
