# api/user/controller.go
@@ -6,7 +6,10 @@ import (
 	"api/helper"
 	"api/model"
 	"encoding/json"
+	"fmt"
 	"net/http"
+
+	"github.com/go-chi/chi/v5"
 )
 
 // @Summary Create user
@@ -18,18 +21,52 @@ import (
 // @Success 200 {object} model.Users
 // @Router /api/users [post]
 func CreateUser(w http.ResponseWriter, r *http.Request) {
-	var user CreateUserRequest
+	var body CreateUserRequest
 
-	err := json.NewDecoder(r.Body).Decode(&user)
+	err := json.NewDecoder(r.Body).Decode(&body)
 	if err != nil {
-		http.Error(w, "Invalid JSON", http.StatusBadRequest)
+		helper.JsonResponse(w, &helper.ApiResponse{
+			Code:    http.StatusBadRequest,
+			Status:  helper.StatusError,
+			Message: "Invalid JSON",
+		})
 		return
 	}
-	config.Database.Create(&model.Users{
-		Name:  user.Name,
-		Email: user.Email,
-		Age:   user.Age,
-	})
+	if body.Name == "" {
+		helper.JsonResponse(w, &helper.ApiResponse{
+			Code:    http.StatusBadRequest,
+			Status:  helper.StatusError,
+			Message: "name is required",
+		})
+		return
+	}
+
+	user := model.Users{
+		Name:  body.Name,
+		Email: body.Email,
+	}
+	checkUser := config.Database.Find(&user, "email = ?", body.Email)
+
+	if checkUser.RowsAffected > 0 {
+		helper.JsonResponse(w, &helper.ApiResponse{
+			Code:    http.StatusBadRequest,
+			Status:  helper.StatusError,
+			Message: "User already exists",
+			Data:    user,
+		})
+		return
+	}
+
+	result := config.Database.Create(&user)
+	if result.Error != nil {
+		fmt.Println(result.Error)
+		helper.JsonResponse(w, &helper.ApiResponse{
+			Code:    http.StatusInternalServerError,
+			Status:  helper.StatusError,
+			Message: "Internal Server Error",
+		})
+		return
+	}
 
 	response := &helper.ApiResponse{
 		Code:    http.StatusOK,
@@ -64,17 +101,43 @@ func IndexUser(w http.ResponseWriter, r *http.Request) {
 	helper.JsonResponse(w, response)
 }
 
+// @Summary Update user
+// @Description Update a user
+// @Tags users
+// @Accept json
+// @Produce json
+// @Param id path string true "User ID"
+// @Param user body UpdateUserRequest true "Users Data"
+// @Success 200 {object} model.Users
+// @Router /api/users/{user} [put]
 func UpdateUser(w http.ResponseWriter, r *http.Request) {
-	var user model.Users
-
-	err := json.NewDecoder(r.Body).Decode(&user)
+	id := chi.URLParam(r, "user")
+	var body UpdateUserRequest
+	err := json.NewDecoder(r.Body).Decode(&body)
 	if err != nil {
 		http.Error(w, "Invalid JSON", http.StatusBadRequest)
 		return
 	}
+	user := config.Database.Where("id = ?", id)
+	if user.RowsAffected == 0 {
+		response := &helper.ApiResponse{
+			Code:    http.StatusNotFound,
+			Status:  httpStatusText.FAILED,
+			Message: "User not found",
+			Data:    nil,
+		}
+		helper.JsonResponse(w, response)
+		return
+	}
+	result := user.Updates(&body)
+	if result.Error != nil {
+		http.Error(w, result.Error.Error(), http.StatusInternalServerError)
+		return
+	}
+
 	response := &helper.ApiResponse{
 		Code:    http.StatusOK,
-		Status:  helper.StatusSuccess,
+		Status:  httpStatusText.SUCCESS,
 		Message: "User updated successfully",
 		Data:    user,
 	}
