# docs/swagger.json
@@ -58,6 +58,47 @@
                     }
                 }
             }
+        },
+        "/api/users/{user}": {
+            "put": {
+                "description": "Update a user",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "users"
+                ],
+                "summary": "Update user",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "User ID",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "description": "Users Data",
+                        "name": "user",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/user.UpdateUserRequest"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/model.Users"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
@@ -66,6 +107,9 @@
             "properties": {
                 "age": {
                     "type": "integer"
+                },
+                "created_at": {
+                    "type": "string"
                 },
                 "email": {
                     "description": "Unique column",
@@ -77,20 +121,44 @@
                 },
                 "name": {
                     "type": "string"
+                },
+                "updated_at": {
+                    "type": "string"
                 }
             }
         },
         "user.CreateUserRequest": {
             "type": "object",
             "properties": {
-                "age": {
-                    "type": "integer"
-                },
                 "email": {
-                    "type": "string"
+                    "type": "string",
+                    "default": "john@example.com",
+                    "example": "john@example.com"
                 },
                 "name": {
-                    "type": "string"
+                    "type": "string",
+                    "default": "John Doe",
+                    "example": "John Doe"
+                }
+            }
+        },
+        "user.UpdateUserRequest": {
+            "type": "object",
+            "properties": {
+                "age": {
+                    "type": "integer",
+                    "default": 30,
+                    "example": 30
+                },
+                "email": {
+                    "type": "string",
+                    "default": "updated@example.com",
+                    "example": "updated@example.com"
+                },
+                "name": {
+                    "type": "string",
+                    "default": "John Updated",
+                    "example": "John Updated"
                 }
             }
         }
